--- a/E_Ticaret_2023/E_Ticaret_2023.csproj
+++ b/E_Ticaret_2023/E_Ticaret_2023.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KategoriController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\UrunController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -326,9 +327,15 @@
     <Content Include="Views\Kategori\Details.cshtml" />
     <Content Include="Views\Kategori\Edit.cshtml" />
     <Content Include="Views\Kategori\Index.cshtml" />
+    <Content Include="Views\Urun\Create.cshtml" />
+    <Content Include="Views\Urun\Delete.cshtml" />
+    <Content Include="Views\Urun\Details.cshtml" />
+    <Content Include="Views\Urun\Edit.cshtml" />
+    <Content Include="Views\Urun\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Resim\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.rtl.min.css.map" />
