--- a/E_Ticaret_2023/Web.config
+++ b/E_Ticaret_2023/Web.config
@@ -11,11 +11,11 @@
   </configSections>
   <connectionStrings>
     
-    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-TUMHS1A\NA;Initial Catalog=E_Ticaret_2023;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=DESKTOP-V3J8H32;Initial Catalog=E_Ticaret_2023;Integrated Security=True" providerName="System.Data.SqlClient" />
     
- 
+    <!--DESKTOP-TUMHS1A\NA-->
     
-    <add name="E_Ticaret_2023Entities1" connectionString="metadata=res://*/Models.E_Ticaret.csdl|res://*/Models.E_Ticaret.ssdl|res://*/Models.E_Ticaret.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-TUMHS1A\NA;initial catalog=E_Ticaret_2023;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="E_Ticaret_2023Entities1" connectionString="metadata=res://*/Models.E_Ticaret.csdl|res://*/Models.E_Ticaret.ssdl|res://*/Models.E_Ticaret.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=DESKTOP-V3J8H32;initial catalog=E_Ticaret_2023;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   
   </connectionStrings>
   
