--- a/E_Ticaret_2023/E_Ticaret_2023.csproj
+++ b/E_Ticaret_2023/E_Ticaret_2023.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\KategoriController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\SepetController.cs" />
     <Compile Include="Controllers\UrunController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -332,6 +333,8 @@
     <Content Include="Views\Urun\Details.cshtml" />
     <Content Include="Views\Urun\Edit.cshtml" />
     <Content Include="Views\Urun\Index.cshtml" />
+    <Content Include="Views\Home\Urun.cshtml" />
+    <Content Include="Views\Sepet\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
